--- a/api_implementation/src/main/res/values/api_string.xml
+++ b/api_implementation/src/main/res/values/api_string.xml
@@ -20,8 +20,8 @@
     <string name="api_signup">Sign Up</string>
     <string name="api_signup_failed">Cannot sign up on this device, you must register with a primary
         device that has a phone number first!</string>
-    <string name="api_skip_signup">Or, if you just want to use the app on this device and not the network
-        features such as texting from a tablet or computer, you can skip this step:</string>
+    <string name="api_skip_signup">If you just want to just use the app on this phone and not the network
+        features such as texting from a tablet or computer, you can skip this:</string>
     <string name="api_skip">Skip</string>
     <string name="api_email">Email Address</string>
     <string name="api_password">Password</string>
