--- a/shared/src/main/res/layout/page_account_intro.xml
+++ b/shared/src/main/res/layout/page_account_intro.xml
@@ -139,7 +139,7 @@
                 android:background="@drawable/pulse_ripple"
                 android:clickable="true"
                 android:padding="12dp"
-                android:text="@string/try_it"
+                android:text="@string/select_purchase"
                 android:textColor="@color/api_login_background"
                 android:textSize="18sp"
                 android:textStyle="bold" />
