--- a/shared/src/main/res/xml/my_account.xml
+++ b/shared/src/main/res/xml/my_account.xml
@@ -42,7 +42,7 @@
 
         <Preference
             android:key="@string/pref_go_to_web"
-            android:title="@string/website"
+            android:title="@string/view_platforms"
             app:iconSpaceReserved="false" />
 
     </xyz.klinker.messenger.shared.view.MaterialPreferenceCategoryCompat>
