--- a/shared/src/main/res/layout/activity_account_purchase.xml
+++ b/shared/src/main/res/layout/activity_account_purchase.xml
@@ -22,7 +22,7 @@
     android:background="@color/api_window_background"
     tools:ignore="Overdraw">
 
-    <include layout="@layout/page_account_intro" />
+    <!--<include layout="@layout/page_account_intro" />-->
 
     <include layout="@layout/page_purchase_options" />
 
