--- a/shared/src/main/res/layout/page_purchase_options.xml
+++ b/shared/src/main/res/layout/page_purchase_options.xml
@@ -198,12 +198,12 @@
         android:paddingStart="20dp"
         android:paddingBottom="6dp">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="6dp"
-            android:layout_height="6dp"
-            android:alpha=".6"
-            android:src="@color/primaryText"
-            app:civ_border_width="0dp" />
+        <!--<de.hdodenhof.circleimageview.CircleImageView-->
+            <!--android:layout_width="6dp"-->
+            <!--android:layout_height="6dp"-->
+            <!--android:alpha=".6"-->
+            <!--android:src="@color/primaryText"-->
+            <!--app:civ_border_width="0dp" />-->
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="9dp"
