--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -17,8 +17,15 @@
 <changelog>
 
     <version
+        name="4.0.4"
+        description="August 25nd, 2018">
+        <!-- Change a few of the analytics events -->
+        <text>Bug fixes</text>
+    </version>
+
+    <version
         name="4.0.3"
-        description="August 22nd, 2018">
+        description="August 23nd, 2018">
         <!-- Go to a free 7 day trial, outside of Google Play -->
         <!-- Don't notify a muted conversation, when a message is received through the firebase handler service -->
         <text>Improvements to the trial process for the "Text from any Device" functionality</text>
