--- a/api_implementation/src/main/res/layout/api_activity_login.xml
+++ b/api_implementation/src/main/res/layout/api_activity_login.xml
@@ -63,7 +63,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:id="@+id/skip_holder">
+            android:id="@+id/skip_holder"
+            android:visibility="gone">
 
             <View
                 android:layout_width="match_parent"
