--- a/shared/src/main/res/layout/activity_account_trial.xml
+++ b/shared/src/main/res/layout/activity_account_trial.xml
@@ -52,7 +52,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="@string/optimized_for_all_your_devices"
+                android:text="@string/trial_description"
                 android:textColor="@android:color/white"
                 android:textSize="16sp" />
 
@@ -119,7 +119,7 @@
                 android:paddingEnd="24dp"
                 android:paddingStart="24dp"
                 android:paddingTop="24dp"
-                android:text="@string/trial_description"
+                android:text="@string/purchase_description"
                 android:textColor="@color/primaryText"
                 android:textSize="16sp" />
 
@@ -137,15 +137,8 @@
                     app:civ_border_width="0dp"
                     android:layout_width="9dp"
                     android:layout_height="9dp"
-                    android:src="@color/primaryText" />
-
-                <de.hdodenhof.circleimageview.CircleImageView
-                    app:civ_border_width="0dp"
-                    android:layout_width="6dp"
-                    android:layout_height="6dp"
-                    android:layout_marginStart="8dp"
-                    android:alpha=".6"
-                    android:src="@color/primaryText" />
+                    android:src="@color/primaryText"
+                    android:visibility="gone"/>
 
                 <View
                     android:layout_width="0dp"
@@ -159,6 +152,7 @@
                     android:layout_gravity="end"
                     android:background="@drawable/pulse_ripple"
                     android:clickable="true"
+                    android:focusable="true"
                     android:padding="12dp"
                     android:text="@string/try_it"
                     android:textColor="@color/api_login_background"
