attempt to add link to call with duo

--- a/shared/src/main/res/menu-sw600dp/fragment_messages.xml
+++ b/shared/src/main/res/menu-sw600dp/fragment_messages.xml
@@ -25,6 +25,12 @@
         app:showAsAction="ifRoom" />
 
     <item
+        android:id="@+id/menu_call_with_duo"
+        android:icon="@drawable/ic_call_video"
+        android:title="@string/menu_video_call"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/menu_conversation_information"
         android:icon="@drawable/ic_about"
         android:title="@string/menu_conversation_information"
