--- a/shared/src/main/res/layout/activity_account_trial.xml
+++ b/shared/src/main/res/layout/activity_account_trial.xml
@@ -15,8 +15,8 @@
   -->
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -123,41 +123,53 @@
                 android:textColor="@color/primaryText"
                 android:textSize="16sp" />
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="24dp"
+                android:alpha=".2"
+                android:background="@color/secondaryText" />
+
             <LinearLayout
+                android:id="@+id/try_it"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="12dp"
-                android:layout_marginStart="20dp"
+                android:background="@drawable/pulse_ripple"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
-                android:paddingTop="6dp"
-                android:paddingBottom="6dp" >
+                android:paddingBottom="16dp"
+                android:paddingEnd="24dp"
+                android:paddingStart="24dp"
+                android:paddingTop="16dp">
 
-                <de.hdodenhof.circleimageview.CircleImageView
-                    app:civ_border_width="0dp"
-                    android:layout_width="9dp"
-                    android:layout_height="9dp"
-                    android:src="@color/primaryText"
-                    android:visibility="gone"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:text="@string/try_it"
+                    android:textColor="@color/primaryText"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
 
                 <View
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:layout_weight="1" />
 
-                <TextView
-                    android:id="@+id/try_it"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="end"
-                    android:background="@drawable/pulse_ripple"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:padding="12dp"
-                    android:text="@string/try_it"
-                    android:textColor="@color/api_login_background"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_marginTop="1dp"
+                    android:src="@drawable/ic_chevron_right"
+                    android:tint="@color/primaryText" />
+
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_marginStart="-17dp"
+                    android:layout_marginTop="1dp"
+                    android:src="@drawable/ic_chevron_right"
+                    android:tint="@color/primaryText" />
 
             </LinearLayout>
 
