--- a/shared/src/main/res/layout/activity_account_trial.xml
+++ b/shared/src/main/res/layout/activity_account_trial.xml
@@ -146,7 +146,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="8dp"
-                    android:text="@string/try_it"
+                    android:text="@string/start_free_trial"
                     android:textColor="@color/primaryText"
                     android:textSize="16sp"
                     android:textStyle="bold" />
