--- a/shared/src/main/res/layout/page_account_intro.xml
+++ b/shared/src/main/res/layout/page_account_intro.xml
@@ -24,16 +24,9 @@
             android:layout_height="wrap_content"
             android:text="@string/beautiful_powerful_instant"
             android:textColor="@android:color/white"
+            android:gravity="center_horizontal"
             android:textSize="18sp"
             android:textStyle="bold" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="@string/optimized_for_all_your_devices"
-            android:textColor="@android:color/white"
-            android:textSize="16sp" />
 
     </LinearLayout>
 
@@ -98,51 +91,58 @@
             android:paddingEnd="24dp"
             android:paddingStart="24dp"
             android:paddingTop="24dp"
-            android:text="@string/true_imessage_competitor"
+            android:text="@string/trial_description"
             android:textColor="@color/primaryText"
             android:textSize="16sp" />
 
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="24dp"
+            android:alpha=".2"
+            android:background="@color/secondaryText" />
+
         <LinearLayout
+            android:id="@+id/try_it"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="12dp"
-            android:layout_marginStart="20dp"
+            android:background="@drawable/pulse_ripple"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:paddingTop="6dp"
-            android:paddingBottom="6dp" >
+            android:paddingBottom="16dp"
+            android:paddingEnd="24dp"
+            android:paddingStart="24dp"
+            android:paddingTop="16dp">
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                app:civ_border_width="0dp"
-                android:layout_width="9dp"
-                android:layout_height="9dp"
-                android:src="@color/primaryText" />
-
-            <de.hdodenhof.circleimageview.CircleImageView
-                app:civ_border_width="0dp"
-                android:layout_width="6dp"
-                android:layout_height="6dp"
-                android:layout_marginStart="8dp"
-                android:alpha=".6"
-                android:src="@color/primaryText" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:text="@string/create_your_pulse_account"
+                android:textColor="@color/primaryText"
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
             <View
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_weight="1" />
 
-            <TextView
-                android:id="@+id/try_it"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:background="@drawable/pulse_ripple"
-                android:clickable="true"
-                android:padding="12dp"
-                android:text="@string/select_purchase"
-                android:textColor="@color/api_login_background"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginTop="1dp"
+                android:src="@drawable/ic_chevron_right"
+                android:tint="@color/primaryText" />
+
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginStart="-17dp"
+                android:layout_marginTop="1dp"
+                android:src="@drawable/ic_chevron_right"
+                android:tint="@color/primaryText" />
 
         </LinearLayout>
 
