--- a/shared/src/main/res/layout/page_pick_subscription_options.xml
+++ b/shared/src/main/res/layout/page_pick_subscription_options.xml
@@ -20,17 +20,19 @@
         android:padding="24dp">
 
         <TextView
+            android:id="@+id/select_purchase_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/competition_cant_beat"
+            android:text="@string/select_a_purchase"
             android:textColor="@android:color/white"
-            android:textSize="16sp" />
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="@string/select_a_trial_below"
+            android:layout_marginTop="16dp"
+            android:text="@string/select_a_purchase_description"
             android:textColor="@android:color/white"
             android:textSize="16sp" />
 
@@ -182,11 +184,51 @@
                     android:textColor="@color/primaryText"
                     android:textSize="14sp" />
 
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/cancel_trial"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/pulse_ripple"
+            android:clickable="true"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:paddingBottom="16dp"
+            android:paddingEnd="16dp"
+            android:paddingStart="16dp"
+            android:paddingTop="16dp"
+            android:visibility="gone">
+
+            <ImageView
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_gravity="center"
+                android:padding="9dp"
+                android:src="@drawable/ic_close"
+                android:tint="@color/primaryText" />
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:maxLines="1"
-                    android:text="@string/billed_immediately"
+                    android:text="@string/cancel_trial"
+                    android:textColor="@color/primaryText"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/continue_with_phone_app"
                     android:textColor="@color/primaryText"
                     android:textSize="14sp" />
 
@@ -197,20 +239,22 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/buttons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/drawerBackground"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:paddingStart="20dp"
-        android:paddingBottom="6dp">
+        android:paddingBottom="6dp"
+        android:visibility="gone">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="6dp"
-            android:layout_height="6dp"
-            android:alpha=".6"
-            android:src="@color/primaryText"
-            app:civ_border_width="0dp" />
+        <!--<de.hdodenhof.circleimageview.CircleImageView-->
+            <!--android:layout_width="6dp"-->
+            <!--android:layout_height="6dp"-->
+            <!--android:alpha=".6"-->
+            <!--android:src="@color/primaryText"-->
+            <!--app:civ_border_width="0dp" />-->
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="9dp"
@@ -230,6 +274,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:background="@drawable/pulse_ripple"
+            android:clickable="true"
             android:padding="12dp"
             android:text="@string/have_an_account"
             android:textColor="@color/secondaryText"
