--- a/api_implementation/src/main/res/values-sv/api_string.xml
+++ b/api_implementation/src/main/res/values-sv/api_string.xml
@@ -22,10 +22,11 @@
     <string name="api_skip">Hoppa över</string>
     <string name="api_email">E-postadress</string>
     <string name="api_password">Lösenord</string>
-    <string name="api_forgot_password">Glömt lösenord?</string>
+    <string name="api_forgot_password">Glömt lösenord? Vanliga frågor</string>
     <string name="api_password_confirmation">Bekräfta lösenord</string>
     <string name="api_name">Namn</string>
     <string name="api_phone_number">Telefonnummer</string>
+    <string name="api_connecting">Ansluter till server...</string>
     <string name="api_device_error">"Ett fel uppstod när enheten lades till. Försök igen! "</string>
     <string name="api_add_second_primary_device">Ser ut som du redan har en primär enhet
 
@@ -45,6 +46,8 @@ primära enheten och ställa in denna som den nya primära?</string>
     <string name="api_activate_1">1</string>
     <string name="api_activate_2">2</string>
     <string name="api_activate_1_1">Bege dig till</string>
+    <string name="api_activate_wear">wear.klinkerapps.com</string>
+    <string name="api_activate_tv">tv.klinkerapps.com</string>
     <string name="api_activate_1_3">på en mobilenhet eller dator.</string>
     <string name="api_activate_2_1">På webbsidan</string>
     <string name="api_activate_2_2">Ange koden till höger</string>
