--- a/shared/src/main/res/layout/activity_account_trial.xml
+++ b/shared/src/main/res/layout/activity_account_trial.xml
@@ -45,7 +45,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/beautiful_powerful_instant"
                 android:textColor="@android:color/white"
-                android:textSize="18sp"
+                android:textSize="18dp"
                 android:textStyle="bold" />
 
             <TextView
@@ -54,7 +54,7 @@
                 android:layout_marginTop="16dp"
                 android:text="@string/trial_description"
                 android:textColor="@android:color/white"
-                android:textSize="16sp" />
+                android:textSize="16dp" />
 
         </LinearLayout>
 
@@ -121,7 +121,7 @@
                 android:paddingTop="24dp"
                 android:text="@string/purchase_description"
                 android:textColor="@color/primaryText"
-                android:textSize="16sp" />
+                android:textSize="16dp" />
 
             <View
                 android:layout_width="match_parent"
@@ -148,7 +148,7 @@
                     android:layout_marginEnd="8dp"
                     android:text="@string/start_free_trial"
                     android:textColor="@color/primaryText"
-                    android:textSize="16sp"
+                    android:textSize="16dp"
                     android:textStyle="bold" />
 
                 <View
