--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -17,6 +17,13 @@
 <changelog>
 
     <version
+        name="4.1.2"
+        description="September 18th, 2018">
+        <text>Bug fixes</text>
+        <text>Translation updates</text>
+    </version>
+
+    <version
         name="4.1.1"
         description="September 11th, 2018">
         <!-- Revert purchase process to original style -->
