--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -17,6 +17,12 @@
 <changelog>
 
     <version
+        name="4.1.3"
+        description="September 25th, 2018">
+        <text>Bug fixes and dependency updates</text>
+    </version>
+
+    <version
         name="4.1.2"
         description="September 19th, 2018">
         <text>Bug fixes</text>
