--- a/wear/src/main/res/layout/activity_messenger.xml
+++ b/wear/src/main/res/layout/activity_messenger.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <android.support.wearable.view.WearableRecyclerView
+    <androidx.wear.widget.WearableRecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
