--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -17,6 +17,13 @@
 <changelog>
 
     <version
+        name="4.1.5"
+        description="October 6th, 2018">
+        <text>Fixes for Android Wear app</text>
+    </version>
+
+
+    <version
         name="4.1.4"
         description="October 4th, 2018">
         <text>Improved multi-select styling</text>
