option to select all messages and conversations, when using the multi-select

--- a/shared/src/main/res/menu/action_mode_message_list.xml
+++ b/shared/src/main/res/menu/action_mode_message_list.xml
@@ -26,6 +26,11 @@
         android:id="@+id/menu_message_details"
         android:title="@string/view_details"
         android:icon="@drawable/ic_info"
-        app:showAsAction="always" />
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/menu_message_select_all"
+        android:title="@string/select_all_messages"
+        app:showAsAction="never" />
 
 </menu>
