--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -19,6 +19,8 @@
     <version
         name="4.2.0"
         description="October 6th, 2018">
+        <text>Option to select all messages, when using the multi-select on the message list</text>
+        <text>Option to select all conversations, when using the multi-select on the conversation list</text>
         <text>Indicate when the latest message has failed, on the conversation list</text>
     </version>
 
