allow android to speak messages to you

--- a/shared/src/main/res/menu/action_mode_message_list.xml
+++ b/shared/src/main/res/menu/action_mode_message_list.xml
@@ -23,10 +23,15 @@
         app:showAsAction="always" />
 
     <item
+        android:id="@+id/menu_speak_message"
+        android:title="@string/speak_message"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/menu_message_details"
         android:title="@string/view_details"
-        android:icon="@drawable/ic_info"
         app:showAsAction="never" />
+
 
     <item
         android:id="@+id/menu_message_select_all"
