--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -17,6 +17,12 @@
 <changelog>
 
     <version
+        name="4.2.2"
+        description="November 7th, 2018">
+        <text>Bug fixes</text>
+    </version>
+
+    <version
         name="4.2.1"
         description="October 29th, 2018">
         <text>Bug fixes</text>
