--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -18,8 +18,9 @@
 
     <version
         name="4.2.4"
-        description="December 4th, 2018">
+        description="December 10th, 2018">
         <text>Share multiple images from your gallery, into Pulse</text>
+        <text>Auto responses will use the SIM card defined for the conversation, if you have a dual SIM phone</text>
     </version>
 
     <version
