--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -18,8 +18,9 @@
 
     <version
         name="4.3.4"
-        description="December 13th, 2018">
+        description="December 23rd, 2018">
         <!-- disable hardware acceleration on the edit text, to prevent a getBlockIndex crash (?) -->
+        <text>Fixes for using the app on 7 inch tablets</text>
         <text>Bug fixes</text>
     </version>
 
