improve the text color of the hint in the gif search

--- a/shared/src/main/res/values-night/colors.xml
+++ b/shared/src/main/res/values-night/colors.xml
@@ -29,6 +29,7 @@
     <color name="selectedBackground">#33444d</color>
     <color name="primaryText">#FFFFFFFF</color>
     <color name="secondaryText">#B2FFFFFF</color>
+    <color name="hintText">#8FFFFFFF</color>
     <color name="divider">#29353a</color>
     <color name="ripple">#22FFFFFF</color>
     <color name="code_block_color">#11FFFFFF</color>
