--- a/shared/src/main/res/values/colors.xml
+++ b/shared/src/main/res/values/colors.xml
@@ -115,6 +115,7 @@
     <color name="selectedBackground">#EEEEEE</color>
     <color name="primaryText">#E2000000</color>
     <color name="secondaryText">#8C000000</color>
+    <color name="hintText">#999999</color>
     <color name="divider">#e5e5e5</color>
     <color name="ripple">#22000000</color>
     <color name="code_block_color">#11000000</color>
