archive conversations from their notification button

--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -21,6 +21,7 @@
         description="Unreleased">
         <text>Add support for searching and sending stickers, within the attachment menu</text>
         <text>Revamp of the UI for the GIF search functionality</text>
+        <text>You can archive conversations from their notification buttons</text>
         <text>You can now edit templates</text>
         <text>Tapping a contact icon on the conversation list will now start the multi-select process</text>
         <text>Improve location sharing</text>
