--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -16,6 +16,12 @@
 
 <changelog>
 
+    <!--<version-->
+        <!--name="4.5.0"-->
+        <!--description="Unreleased">-->
+        <!--<text>Select a phrase to blacklist, instead of just blacklisting by phone number (TODO: Remove feature flag)</text>-->
+    <!--</version>-->
+
     <version
         name="4.4.0"
         description="Unreleased">
